# maplibre-native-ffi

./: .clang-format  .clang-tidy  .clang-tidy-public-headers  .cursorrules  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  RESOURCE_API_DESIGN.md  RESOURCE_API_DESIGN_DRAFT.md  ROADMAP.md  SECURITY.md  build.zig  build.zig.zon  deepseek-plan.md  dprint.json  dprint.jsonc  hk.pkl  justfile  milestone-6-implementation-order.md  mise.ci.toml  mise.toml  offline-regions-api-design.tmp.md  pixi.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/actions/setup/: action.yml
.github/actions/setup-ci-deps/: action.yml
.github/workflows/: ci.yml  docs-pages.yml
.mise/tasks/: ensure-native-library
cmake/: maplibre-native-c.ci-artifact.pc  maplibre-native-c.pc.in  maplibre-native-ffi.pc.in  mln_version.cmake
config/: pixi-env.sh
docs/: .gitignore  .mdxlintrc.json  astro.config.mjs  astro.config.mts  development-setup.md  development.md  issue-17-feature-query-api.md  mise.toml  package-lock.json  package.json  pnpm-lock.yaml  render-session-refactor.md
docs-old/: development.md
docs-old/api/: Doxyfile  mainpage.md
docs-old/api/c/html/: annotated.html  annotated_dup.js  classes.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_bff1a75f97c7ace650ee0c8d57d0aaa5.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  maplibre__native__c_8h.html  maplibre__native__c_8h.js  maplibre__native__c_8h_source.html  menudata.js  navtreedata.js  navtreeindex0.js  structmln__camera__options.html  structmln__map__event.html  structmln__map__options.html  structmln__metal__texture__descriptor.html  structmln__metal__texture__descriptor.js  structmln__metal__texture__frame.html  structmln__metal__texture__frame.js  structmln__screen__point.html  structmln__vulkan__texture__descriptor.html  structmln__vulkan__texture__descriptor.js  structmln__vulkan__texture__frame.html  structmln__vulkan__texture__frame.js
docs/api/: mainpage.md
docs/api/c/: Doxyfile  DoxygenLayout.xml
docs/src/content/docs/: concepts.md  index.mdx  usage.md
docs/src/styles/: custom.css
examples/compose-map/: build.gradle.kts  gradle.properties  settings.gradle.kts
examples/swift-map/: Package.swift  mise.toml
examples/swift-map/Sources/CMapLibreNativeABI/: module.modulemap  shim.c
examples/swift-map/Sources/CMapLibreNativeC/: module.modulemap
examples/swift-map/Sources/SwiftMap/: ABI.swift  App.swift  CAPI.swift  InputController.swift  MapState.swift  MetalMapView.swift
examples/zig-headless/: main.zig
examples/zig-hello/: main.zig
examples/zig-map/: build.zig  build.zig.zon  c.zig  diagnostics.zig  input.zig  main.zig  map_state.zig  mise.toml  render_target.zig  types.zig  viewport.zig
examples/zig-map/.mise/tasks/: compile-shaders.sh
examples/zig-map/render/: mod.zig
examples/zig-map/render/metal/: mod.zig  shader.metal
examples/zig-readback/: build.zig  c.zig  main.zig  mise.toml
examples/zig-sdl3-map/: main.zig
include/: ClientOptions.h  MapOptions.h  MetalRendererBackend.h  MetalRendererFrontend.h  ResourceOptions.h  maplibre_native_abi.h  maplibre_native_c.h
include/maplibre_native_c/: base.h  camera.h  diagnostics.h  logging.h  map.h  projection.h  query.h  render_session.h  runtime.h  style.h  surface.h  texture.h
src/: ClientOptions.cpp  MapOptions.cpp  MetalRendererBackend.mm  MetalRendererFrontend.mm  ResourceOptions.cpp
src/abi/: boundary.hpp  diagnostics.cpp  hello.cpp  logging.cpp  map.cpp  network.cpp  runtime.cpp  texture.cpp  version.cpp
src/c_api/: boundary.hpp  diagnostics.cpp  logging.cpp  map.cpp  network.cpp  render_session.cpp  runtime.cpp  surface.cpp  texture.cpp  version.cpp
src/core/: custom_resource_provider.cpp  custom_resource_provider.hpp  diagnostics.cpp  diagnostics.hpp  logging.cpp  map.cpp  map.hpp  network_status.cpp  resource_loader.cpp  resource_loader.hpp  resource_scheme.cpp  resource_scheme.hpp  runtime.cpp  runtime.hpp
src/diagnostics/: diagnostics.cpp  diagnostics.hpp
src/geojson/: geojson.cpp  geojson.hpp
src/logging/: logging.cpp  logging.hpp
src/map/: map.cpp  map.hpp
src/platform/: abi_file_source_manager.cpp  null_file_source_manager.cpp
src/render/: render_session_common.cpp  render_session_common.hpp  surface_session.cpp  surface_session.hpp  texture_session.cpp  texture_session.hpp
src/render/metal/: metal_surface_session.mm  metal_texture_backend.inc  metal_texture_backend.mm  metal_texture_session.mm
src/render/vulkan/: vulkan_surface_session.cpp  vulkan_texture_backend.cpp  vulkan_texture_backend.hpp  vulkan_texture_session.cpp
src/resources/: custom_resource_provider.cpp  custom_resource_provider.hpp  file_source_manager.cpp  network_status.cpp  network_status.hpp  resource_loader.cpp  resource_loader.hpp
src/runtime/: runtime.cpp  runtime.hpp
src/style/: style_value.cpp  style_value.hpp
test/: ClientOptionsTest.cpp  MapOptionsTest.cpp  MetalRendererBackendTest.mm  MetalRendererFrontendTest.mm  ResourceOptionsTest.cpp  main.cpp
tests/abi/: camera.zig  diagnostics.zig  events.zig  logging.zig  main.zig  map_lifecycle.zig  resources.zig  runtime.zig  style.zig  support.zig  texture.zig  texture_metal.zig  texture_vulkan.zig
tests/c/: camera.zig  events.zig  feature_state.zig  geojson.zig  logging.zig  main.zig  map_lifecycle.zig  map_tuning.zig  metal_support.zig  metal_support_macos.m  projection.zig  query.zig  resources.zig  runtime.zig  style.zig  style_values.zig  support.zig  surface.zig  texture.zig  texture_metal.zig  texture_owned.zig  texture_vulkan.zig
tests/fuzz/: abi_lifecycle.zig  main.zig
todo/: debug-log-observability.md  event-queue-thread-safety.md  log-callback-threading.md  runloop-ownership.md  zig-cmake-artifact-path.md
(+112 files in other folders)
